--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
-    <string name="app_name">final7</string>
+    <string name="app_name">天使小莉</string>
     <string name="title_activity_second">SecondActivity</string>
     <string name="title_activity_main3">MainActivity3</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_main4">MainActivity4</string>
+    <string name="title_activity_main5">MainActivity5</string>
+    <string name="title_activity_main6">MainActivity6</string>
+    <string name="title_activity_main7">MainActivity7</string>
+    <string name="title_activity_main8">MainActivity8</string>
+    <string name="title_activity_main9">MainActivity9</string>
+    <string name="title_activity_main10">MainActivity10</string>
+    <string name="title_activity_main11">MainActivity11</string>
 </resources>
